[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cec2017-rao2"
version = "0.2.0"
description = "CEC2017 benchmark suite using Rao-1, Rao-2, Rao-3 & FISA optimization algorithms"
authors = [
    {name = "Lakshya Maheshwari"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "tqdm",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "mypy"]

[tool.setuptools]
packages = ["CEC2017"]

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.package-data]
CEC2017 = ["functions/cec2017/data/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -v"

[tool.mypy]
python_version = "3.7"
ignore_missing_imports = true
disallow_untyped_defs = false